Bug 158942 - Skia/Vulkan: assertion failed when showing small tooltip
Summary: Skia/Vulkan: assertion failed when showing small tooltip
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.0.2
Keywords:
: 158739 (view as bug list)
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2023-12-31 05:44 UTC by Mike Kaganski
Modified: 2024-01-02 09:49 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-12-31 05:44:22 UTC
Using a debug master build, Skia/Vulkan, English UI (just to have a consistent repro steps, with known length of strings), and tooltips enabled (not extended tips, because that would make sizes larger):
Open any module, expand a color palette drop-down (e.g., background color toolbar control in Calc), and hover the mouse pointer over top rows of Standard palette's colors.

As soon as a short tooltip is to be displayed (e.g., Gray or Red), assertion in SkiaSalGraphicsImpl::flushSurfaceToWindowContext fires, and the program crashes.
Comment 1 Commit Notification 2023-12-31 07:36:52 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/025a49a40a3c0c1be5bf4383e87a1cc60014b7f4

tdf#158942: renderMethodToUseForSize may force raster surface

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 V Stuart Foote 2023-12-31 13:52:32 UTC
@Mike, would this isGPU() assert also be issue of bug 158739?
Comment 3 Mike Kaganski 2023-12-31 14:07:31 UTC
Yes, definitely.
Comment 4 V Stuart Foote 2023-12-31 20:07:31 UTC
*** Bug 158739 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2024-01-02 09:49:30 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/8caf02c848989c25dbe235f7d8a027928fafcc75

tdf#158942: renderMethodToUseForSize may force raster surface

It will be available in 24.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.