tdf#158942: renderMethodToUseForSize may force raster surface

Maybe there is a way to avoid this path for the situation of creating
small raster surfaces like tooltips, but I have no clue how to do it.

Change-Id: I5ab6ccad572e0efd682bf3ef850b68b6b1941537
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161460
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 025a49a40a3c0c1be5bf4383e87a1cc60014b7f4)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161418
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>